[workspace]

members = [
  "filecoin-proofs",
  "storage-proofs",
  "storage-proofs/core",
  "storage-proofs/porep",
  "storage-proofs/post",
  "fil-proofs-tooling",
  "sha2raw"
]

[patch.crates-io]
bellperson = { git = "https://github.com/filcloud/bellman", branch ="filcloud-22" }
neptune = { git = "https://github.com/filcloud/neptune", branch ="filcloud-22" }
