[workspace]

members = [
  "filecoin-proofs",
  "storage-proofs",
  "storage-proofs/core",
  "storage-proofs/porep",
  "storage-proofs/post",
  "fil-proofs-tooling",
  "sha2raw"
]

[patch.crates-io]
bellperson = { git = "https://github.com/filcloud/bellman", branch ="filcloud-13" }
neptune = { git = "https://github.com/filcloud/neptune", branch ="filcloud-14" }
merkletree = { git = "https://github.com/filcloud/merkle_light", branch ="filcloud-11" }
