[workspace]

members = [
  "filecoin-proofs",
  "storage-proofs-core",
  "storage-proofs-porep",
  "storage-proofs-post",
  "fil-proofs-tooling",
  "fil-proofs-param",
  "fr32",
  "sha2raw",
  "filecoin-hashers",
]

[patch.crates-io]
bellperson = { git = "https://github.com/filcloud/bellman", branch ="filcloud-26" }
neptune = { git = "https://github.com/filcloud/neptune", branch ="filcloud-25" }
